Rewriting welcome template

--- a/public/app/home/home.html
+++ b/public/app/home/home.html
@@ -1,24 +1,25 @@
 <div class="home">
 
-<div class="welcome">
-	<div class="container">
+	<div class='welcome hide'>
 
-		<h1>Voting App</h1>
-		<p>Do you want know what is the best 200$ graphics card ?
-			<br> Or what car you should buy ?
-			<br> This is your site !!
-			<br> Just ask !! (cambiar)
-		</p>
+		<div class="container-fluid">
+
+			<h1>Voting App</h1>
+			<p>
+				Do you need create custom polls ? <br>
+				This is your site
+			</p>
+
+		</div>
+
+		<a href="/#/register" class="btn btn-lg">Register</a>
 
 	</div>
 
-</div>
+	<div class="polls">
 
-<div class='container button-div'>
 
-	<a href="/#/register" class="btn btn-lg">Register</a>
 
-</div>
-
+	</div>
 
 </div>
