--- a/public/app/home/home.html
+++ b/public/app/home/home.html
@@ -6,8 +6,8 @@
 
 			<h1>Voting App</h1>
 			<p>
-				Do you need create custom polls ? <br>
-				This is your site
+				Do you need create custom polls ?
+				<br> This is your site
 			</p>
 
 		</div>
@@ -18,7 +18,77 @@
 
 	<div class="polls">
 
+		<div class="container">
 
+			<h2>Latest polls</h2>
+
+			<div class="row search">
+				<div class="col-md-4 col-md-offset-1 col-sm-4 col-sm-offset-1 col-xs-12">
+
+					<div class="form-group">
+						<div>
+							<label for="search" class="control-label">Search</label>
+							<input type="text" class="form-control" id="search">
+						</div>
+					</div>
+
+				</div>
+
+				<div class="col-md-4 col-md-offset-2 col-sm-4 col-sm-offset-2 col-xs-12">
+
+					<div class="form-group">
+						<label for="orderBy" class="control-label">Order by</label>
+
+						<div>
+							<select id="orderBy" class="form-control">
+								<option>Newest first</option>
+								<option>Total votes</option>
+							</select>
+						</div>
+					</div>
+
+				</div>
+
+			</div>
+
+			<table class="table table-striped table-hover table-responsive">
+				<thead>
+					<tr>
+						<th>#</th>
+						<th>Column heading</th>
+						<th>Column heading</th>
+						<th>Column heading</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>1</td>
+						<td>Column content</td>
+						<td>Column content</td>
+						<td>Column content</td>
+					</tr>
+					<tr>
+						<td>2</td>
+						<td>Column content</td>
+						<td>Column content</td>
+						<td>Column content</td>
+					</tr>
+					<tr>
+						<td>2</td>
+						<td>Column content</td>
+						<td>Column content</td>
+						<td>Column content</td>
+					</tr>
+					<tr>
+						<td>2</td>
+						<td>Column content</td>
+						<td>Column content</td>
+						<td>Column content</td>
+					</tr>
+				</tbody>
+			</table>
+
+		</div>
 
 	</div>
 
