New poll template

--- a/public/app/login/login.html
+++ b/public/app/login/login.html
@@ -14,7 +14,7 @@
 				<input type="text" class="form-control" id="password">
 			</div>
 
-			<a href="/#/register" class="btn btn-lg pull-right">Log In</a>
+			<a href="/#/login" class="btn btn-lg pull-right">Log In</a>
 
 		</form>
 
