--- a/public/app/register/register.html
+++ b/public/app/register/register.html
@@ -14,7 +14,7 @@
 				<input type="text" class="form-control" id="password">
 			</div>
 
-			<a href="/#/register" class="btn btn-lg pull-right">Register</a>
+			<a href="/#/register/" class="btn btn-lg pull-right">Register</a>
 
 		</form>
 
