--- a/public/app/settings/settings.html
+++ b/public/app/settings/settings.html
@@ -14,7 +14,7 @@
 				<input type="text" class="form-control" id="password">
 			</div>
 
-			<a href="/#/register" class="btn btn-lg pull-right">Update</a>
+			<a href="/#/settings" class="btn btn-lg pull-right">Update</a>
 
 		</form>
 
