--- a/public/app/home/home.html
+++ b/public/app/home/home.html
@@ -20,7 +20,7 @@
 
 		<div class="container">
 
-			<h2>Latest polls</h2>
+			<h2>Public polls</h2>
 
 			<div class="row search">
 				<div class="col-md-4 col-md-offset-1 col-sm-4 col-sm-offset-1 col-xs-12">
@@ -54,7 +54,6 @@
 			<table class="table table-striped table-hover table-responsive">
 				<thead>
 					<tr>
-						<th>#</th>
 						<th>Column heading</th>
 						<th>Column heading</th>
 						<th>Column heading</th>
@@ -62,31 +61,25 @@
 				</thead>
 				<tbody>
 					<tr>
-						<td>1</td>
 						<td>Column content</td>
 						<td>Column content</td>
 						<td>Column content</td>
 					</tr>
 					<tr>
-						<td>2</td>
 						<td>Column content</td>
 						<td>Column content</td>
 						<td>Column content</td>
 					</tr>
 					<tr>
-						<td>2</td>
 						<td>Column content</td>
 						<td>Column content</td>
 						<td>Column content</td>
 					</tr>
-					<tr>
-						<td>2</td>
-						<td>Column content</td>
-						<td>Column content</td>
-						<td>Column content</td>
-					</tr>
+
 				</tbody>
 			</table>
+
+			<a href="/#/register/" class="btn btn-lg">Load more</a>
 
 		</div>
 
