--- a/public/app/home/home.html
+++ b/public/app/home/home.html
@@ -51,35 +51,38 @@
 
 			</div>
 
-			<table class="table table-striped table-hover table-responsive">
-				<thead>
-					<tr>
-						<th>Column heading</th>
-						<th>Column heading</th>
-						<th>Column heading</th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr>
-						<td>Column content</td>
-						<td>Column content</td>
-						<td>Column content</td>
-					</tr>
-					<tr>
-						<td>Column content</td>
-						<td>Column content</td>
-						<td>Column content</td>
-					</tr>
-					<tr>
-						<td>Column content</td>
-						<td>Column content</td>
-						<td>Column content</td>
-					</tr>
+			<div class='table-responsive'>
+				<table class="table table-striped table-hover">
+					<thead>
+						<tr>
+							<th>Poll name</th>
+							<th>Most voted</th>
+							<th>Total votes</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td><a href="">name</a></td>
+							<td>coca cola</td>
+							<td>300</td>
+						</tr>
+						<tr>
+							<td><a href="">name</a></td>
+							<td>coca cola</td>
+							<td>300</td>
+						</tr>
+						<tr>
+							<td><a href="">name</a></td>
+							<td>coca cola</td>
+							<td>300</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
 
-				</tbody>
-			</table>
-
-			<a href="/#/register/" class="btn btn-lg">Load more</a>
+			<div class="loadMore">
+				<a href="/#/register/" class="btn btn-lg">Load more</a>
+			</div>
 
 		</div>
 
