--- a/public/app/dashboard/dashboard.html
+++ b/public/app/dashboard/dashboard.html
@@ -18,7 +18,7 @@
 				<form>
 					<div class="form-group">
 						<label class="control-label" for="namePoll">Name your poll</label>
-						<input type="text" class="form-control" id="namePoll" name="namePoll">
+						<input maxlength='100' type="text" class="form-control" id="namePoll" name="namePoll" required>
 					</div>
 
 					<div class="checkbox">
@@ -30,10 +30,10 @@
 					<p>Options</p>
 
 					<div class="form-group">
-						<input class="form-control" type="text" id="inputSmall" placeholder="Option">
+						<input maxlength='70' class="form-control" type="text" id="inputSmall" placeholder="Option">
 					</div>
 					<div class="form-group">
-						<input class="form-control" type="text" id="inputSmall" placeholder="Option ">
+						<input maxlength='70' class="form-control" type="text" id="inputSmall" placeholder="Option ">
 					</div>
 
 					<a href="#" class="btn btn-lg">New option</a>
@@ -50,21 +50,43 @@
 					<table class="table table-striped table-hover">
 						<thead>
 							<tr>
-								<th>Column heading</th>
-								<th>Column heading</th>
-								<th>Column heading</th>
+								<th>Poll name</th>
+								<th>Most voted</th>
+								<th>Total votes</th>
+								<th>Operation</th>
 							</tr>
 						</thead>
 						<tbody>
 							<tr>
-
 								<td>Poll name</td>
-								<td></td>
+								<td>coca cola</td>
+								<td>564</td>
+								<td>Delete</td>
+							</tr>
+							<tr>
+								<td>Poll name</td>
+								<td>coca cola</td>
+								<td>564</td>
+								<td>Delete</td>
+							</tr>
+							<tr>
+								<td>Poll name</td>
+								<td>coca cola</td>
+								<td>564</td>
+								<td>Delete</td>
+							</tr>
+							<tr>
+								<td>Poll name</td>
+								<td>coca cola</td>
+								<td>564</td>
 								<td>Delete</td>
 							</tr>
 						</tbody>
 					</table>
 				</div>
+
+				<a href="/#/poll">poll sample</a>
+
 			</section>
 
 		</div>
