--- a/public/app/login/login.html
+++ b/public/app/login/login.html
@@ -7,11 +7,11 @@
 		<form>
 			<div class="form-group">
 				<label class="control-label" for="email">Email</label>
-				<input type="text" class="form-control" id="email">
+				<input type="text" class="form-control" id="email" required>
 			</div>
 			<div class="form-group">
 				<label class="control-label" for="password">Password</label>
-				<input type="text" class="form-control" id="password">
+				<input type="password" class="form-control" id="password" required>
 			</div>
 
 			<a href="/#/login" class="btn btn-lg pull-right">Log In</a>
