--- a/public/app/register/register.html
+++ b/public/app/register/register.html
@@ -7,11 +7,11 @@
 		<form>
 			<div class="form-group">
 				<label class="control-label" for="email">Email</label>
-				<input type="text" class="form-control" id="email">
+				<input type="text" class="form-control" id="email" required>
 			</div>
 			<div class="form-group">
 				<label class="control-label" for="password">Password</label>
-				<input type="text" class="form-control" id="password">
+				<input type="password" class="form-control" id="password" minlength='5' required>
 			</div>
 
 			<a href="/#/register/" class="btn btn-lg pull-right">Register</a>
