--- a/public/app/settings/settings.html
+++ b/public/app/settings/settings.html
@@ -7,7 +7,7 @@
 		<form>
 			<div class="form-group">
 				<label class="control-label" for="email">Old password</label>
-				<input type="text" class="form-control" id="email">
+				<input type="text" class="form-control" id="email" required>
 			</div>
 			<div class="form-group">
 				<label class="control-label" for="password">New password</label>
