Maybe final templates

--- a/public/app/dashboard/dashboard.html
+++ b/public/app/dashboard/dashboard.html
@@ -58,25 +58,25 @@
 						</thead>
 						<tbody>
 							<tr>
-								<td>Poll name</td>
+								<td> <a href="">Poll name</a> </td>
 								<td>coca cola</td>
 								<td>564</td>
 								<td>Delete</td>
 							</tr>
 							<tr>
-								<td>Poll name</td>
+								<td> <a href="">Poll name</a> </td>
 								<td>coca cola</td>
 								<td>564</td>
 								<td>Delete</td>
 							</tr>
 							<tr>
-								<td>Poll name</td>
+								<td> <a href="">Poll name</a> </td>
 								<td>coca cola</td>
 								<td>564</td>
 								<td>Delete</td>
 							</tr>
 							<tr>
-								<td>Poll name</td>
+								<td> <a href="">Poll name</a> </td>
 								<td>coca cola</td>
 								<td>564</td>
 								<td>Delete</td>
