--- a/public/app/poll/poll.html
+++ b/public/app/poll/poll.html
@@ -4,7 +4,7 @@
 
 		<h2>Poll name</h2>
 
-		<section class="vote hide">
+		<section class="vote">
 
 			<form>
 				<div class="form-group">
@@ -28,7 +28,7 @@
 
 		</section>
 
-		<section class="info">
+		<section class="info hide">
 
 			<section class="primary">
 				<p>Winner: <span>Option X</span> </p>
