--- a/public/app/poll/poll.html
+++ b/public/app/poll/poll.html
@@ -22,13 +22,13 @@
 
 				</div>
 
-				<a href="#" class="btn btn-lg">Submit</a>
+				<button type='submit' class='btn btn-lg'>Submit</button>
 
 			</form>
 
 		</section>
 
-		<section class="info hide">
+		<section class="info">
 
 			<section class="primary">
 				<p>Winner: <span>Option X</span> </p>
@@ -64,7 +64,7 @@
 
 		</section>
 
-		<a href="#" class="btn btn-lg">Delete</a>
+		<button type='submit' class='btn btn-lg'>Delete</button>
 
 	</div>
 
