--- a/public/app/register/register.html
+++ b/public/app/register/register.html
@@ -14,7 +14,7 @@
 				<input type="password" class="form-control" id="password" minlength='5' required>
 			</div>
 
-			<a href="/#/register/" class="btn btn-lg pull-right">Register</a>
+			<button type='submit' class='btn btn-lg pull-right'>Register</button>
 
 		</form>
 
