--- a/public/app/dashboard/dashboard.html
+++ b/public/app/dashboard/dashboard.html
@@ -1,6 +1,6 @@
 <div class="dashboard">
 
-	<div class="container" ng-controller='tabController as tab'>
+	<div class="container">
 
 		<h2>Dashboard</h2>
 
@@ -15,29 +15,34 @@
 
 			<section id="newPoll" ng-show='isSet("newPoll")'>
 
-				<form>
+				<form ng-submit='createPoll()'>
+
 					<div class="form-group">
 						<label class="control-label" for="namePoll">Name your poll</label>
-						<input maxlength='100' type="text" class="form-control" id="namePoll" name="namePoll" required>
+						<input maxlength='100' type="text" class="form-control" id="namePoll" required ng-model='pollName'>
 					</div>
 
 					<div class="checkbox">
 						<label>
-							<input type="checkbox"> <span class="privatePoll">Make this poll private</span>
+							<input type="checkbox" ng-model='private'> <span class="privatePoll">Make this poll private</span>
 						</label>
 					</div>
 
-					<p>Options</p>
+					<div class="options">
 
-					<div class="form-group">
-						<input maxlength='70' class="form-control" type="text" id="inputSmall" placeholder="Option">
-					</div>
-					<div class="form-group">
-						<input maxlength='70' class="form-control" type="text" id="inputSmall" placeholder="Option ">
+						<p>Options</p>
+
+						<div class="form-group">
+							<input required maxlength='70' class="form-control" type="text" id="inputSmall" placeholder="Option" ng-model='options[0]'>
+						</div>
+						<div class="form-group">
+							<input required maxlength='70' class="form-control" type="text" id="inputSmall" placeholder="Option " ng-model='options[1]'>
+						</div>
+
 					</div>
 
-					<a href="#" class="btn btn-lg">New option</a>
-					<a href="#" class="btn btn-lg">Submit</a>
+					<button type='button' class='btn btn-lg' ng-click='addOption()'>New option</button>
+					<button type='submit' class='btn btn-lg'>Submit</button>
 
 				</form>
 
