--- a/public/app/login/login.html
+++ b/public/app/login/login.html
@@ -14,7 +14,7 @@
 				<input type="password" class="form-control" id="password" required>
 			</div>
 
-			<a href="/#/login" class="btn btn-lg pull-right">Log In</a>
+			<button type='submit' class='btn btn-lg pull-right'>Log In</button>
 
 		</form>
 
