--- a/public/app/settings/settings.html
+++ b/public/app/settings/settings.html
@@ -14,7 +14,7 @@
 				<input type="text" class="form-control" id="password">
 			</div>
 
-			<a href="/#/settings" class="btn btn-lg pull-right">Update</a>
+			<button type='submit' class='btn btn-lg pull-right'>Update</button>
 
 		</form>
 
