--- a/public/app/home/home.html
+++ b/public/app/home/home.html
@@ -75,9 +75,7 @@
 				<a href="/#/register/" class="btn btn-lg" ng-click='loadMore()'>Load more</a>
 			</div>
 
-			<div ng-show='noPolls' class="noPolls">
-				<h2>No polls</h2>
-			</div>
+			<h2 ng-show='noPolls' class="noPolls">No polls</h2>
 
 		</div>
 
