--- a/public/app/dashboard/dashboard.html
+++ b/public/app/dashboard/dashboard.html
@@ -33,10 +33,10 @@
 						<p>Options</p>
 
 						<div class="form-group">
-							<input required maxlength='70' class="form-control" type="text" id="inputSmall" placeholder="Option" ng-model='options[0]'>
+							<input required maxlength='70' class="form-control" type="text" id="inputSmall" placeholder="Option" ng-model='options[0].name'>
 						</div>
 						<div class="form-group">
-							<input required maxlength='70' class="form-control" type="text" id="inputSmall" placeholder="Option " ng-model='options[1]'>
+							<input required maxlength='70' class="form-control" type="text" id="inputSmall" placeholder="Option" ng-model='options[1].name'>
 						</div>
 
 					</div>
@@ -51,7 +51,9 @@
 			<!-- My polls -->
 
 			<section id="myPolls" ng-show='isSet("myPolls")'>
-				<div class="table-responsive">
+
+				<div ng-hide='noPolls' class="table-responsive">
+
 					<table class="table table-striped table-hover">
 						<thead>
 							<tr>
@@ -70,9 +72,10 @@
 							</tr>
 						</tbody>
 					</table>
+
 				</div>
 
-				<a href="/#/poll">poll sample</a>
+				<h3 ng-show='noPolls' class="noPolls">No polls</h3>
 
 			</section>
 
