--- a/public/app/sign/login.html
+++ b/public/app/sign/login.html
@@ -5,13 +5,15 @@
 		<h2>Log In</h2>
 
 		<form>
+
 			<div class="form-group">
 				<label class="control-label" for="email">Email</label>
-				<input type="text" class="form-control" id="email" required>
+				<input type="text" ng-model="user.email" class="form-control" id="email" required>
 			</div>
+
 			<div class="form-group">
 				<label class="control-label" for="password">Password</label>
-				<input type="password" class="form-control" id="password" required>
+				<input type="password" ng-model="user.password" class="form-control" id="password" required>
 			</div>
 
 			<button type='submit' class='btn btn-lg pull-right'>Log In</button>
