--- a/public/app/sign/login.html
+++ b/public/app/sign/login.html
@@ -4,11 +4,11 @@
 
 		<h2>Log In</h2>
 
-		<form>
+		<form ng-submit='login()'>
 
 			<div class="form-group">
 				<label class="control-label" for="email">Email</label>
-				<input type="text" ng-model="user.email" class="form-control" id="email" required>
+				<input type="email" ng-model="user.email" class="form-control" id="email" required>
 			</div>
 
 			<div class="form-group">
@@ -19,7 +19,7 @@
 			<button type='submit' class='btn btn-lg pull-right'>Log In</button>
 
 		</form>
-
+		{{user}} {{error}}
 	</div>
 
 </div>
