--- a/public/app/sign/register.html
+++ b/public/app/sign/register.html
@@ -4,16 +4,16 @@
 
 		<h2>Register</h2>
 
-		<form>
+		<form ng-submit='register()'>
 
-		  <div class="form-group">
-				<label class="control-label" for="name">Email</label>
+			<div class="form-group">
+				<label class="control-label" for="name">Name</label>
 				<input type="text" ng-model='user.username' class="form-control" id="name" required>
 			</div>
 
 			<div class="form-group">
 				<label class="control-label" for="email">Email</label>
-				<input type="text" ng-model='user.email' class="form-control" id="email" required>
+				<input type="email" ng-model='user.email' class="form-control" id="email" required>
 			</div>
 
 			<div class="form-group">
