--- a/public/app/sign/login.html
+++ b/public/app/sign/login.html
@@ -8,7 +8,7 @@
 
 			<div class="form-group">
 				<label class="control-label" for="email">Email</label>
-				<input type="email" ng-model="user.email" class="form-control" id="email" required>
+				<input type="email" ng-model="user.username" class="form-control" id="email" required>
 			</div>
 
 			<div class="form-group">
