Joining home and dashboard pages

--- a/public/app/header/header.html
+++ b/public/app/header/header.html
@@ -1,4 +1,5 @@
-<div class="navbar navbar-default">
+<div class="navbar navbar-default" ng-controller='HeaderCtrl'>
+
 	<div class="container">
 
 		<div class="navbar-header">
@@ -16,17 +17,16 @@
 		<div class="navbar-collapse collapse navbar-inverse-collapse">
 			<ul class="nav navbar-nav navbar-right">
 
-			  <li><a href="/#/login">Log In</a></li>
-			  <li><a href="/#/register">Register</a></li>
-				<li><a>Username</a></li>
+				<li ng-hide='isLoggedIn()'><a href="/#/login">Log In</a></li>
+				<li ng-hide='isLoggedIn()'><a href="/#/register">Register</a></li>
+				<li><a>{{ currentUser().username }}</a></li>
 
-				<li class="dropdown">
+				<li ng-show='isLoggedIn()' class="dropdown">
 					<a href="bootstrap-elements.html" data-target="#" class="dropdown-toggle" data-toggle="dropdown">Options
-            <b class="caret"></b></a>
+						<b class="caret"></b></a>
 					<ul class="dropdown-menu">
-						<li><a href="/#/dashboard">Dashboard</a></li>
 						<li><a href="/#/settings">Change Password</a></li>
-						<li><a href="#">Log Out</a></li>
+						<li><a href="" ng-click='logOut()'>Log Out</a></li>
 					</ul>
 				</li>
 
