--- a/public/app/sign/login.html
+++ b/public/app/sign/login.html
@@ -1,5 +1,10 @@
 <div class="login">
 
+	<div ng-show='error' class="alert alert-dismissible alert-danger">
+		<button type="button" class="close" data-dismiss="alert">×</button>
+		<strong>{{error.message}}</strong>
+	</div>
+
 	<div class="container">
 
 		<h2>Log In</h2>
@@ -13,13 +18,13 @@
 
 			<div class="form-group">
 				<label class="control-label" for="password">Password</label>
-				<input type="password" ng-model="user.password" class="form-control" id="password" required>
+				<input type="password" ng-model="user.password" class="form-control" id="password" minlength='5' required>
 			</div>
 
 			<button type='submit' class='btn btn-lg pull-right'>Log In</button>
 
 		</form>
-		{{user}} {{error}}
+
 	</div>
 
 </div>
