--- a/public/app/sign/register.html
+++ b/public/app/sign/register.html
@@ -1,5 +1,10 @@
 <div class="register">
 
+	<div ng-show='error' class="alert alert-dismissible alert-danger">
+		<button type="button" class="close" data-dismiss="alert">×</button>
+		<strong>Error. Maybe this email already exists </strong>
+	</div>
+
 	<div class="container">
 
 		<h2>Register</h2>
