--- a/public/app/settings/settings.html
+++ b/public/app/settings/settings.html
@@ -4,14 +4,16 @@
 
 		<h2>Settings</h2>
 
-		<form>
+		<form ng-submit='update()'>
+
 			<div class="form-group">
-				<label class="control-label" for="email">Old password</label>
-				<input type="text" class="form-control" id="email" required>
+				<label class="control-label" for="currentPassword">Old password</label>
+				<input minlength='5' ng-model='data.currentPassword' type="password" class="form-control" id="currentPassword" required>
 			</div>
+
 			<div class="form-group">
-				<label class="control-label" for="password">New password</label>
-				<input type="text" class="form-control" id="password">
+				<label class="control-label" for="newPassword">New password</label>
+				<input minlength='5' ng-model='data.newPassword' type="password" class="form-control" id="newPassword">
 			</div>
 
 			<button type='submit' class='btn btn-lg pull-right'>Update</button>
