[COMPLETE]  login, register , update profile

--- a/public/app/settings/settings.html
+++ b/public/app/settings/settings.html
@@ -1,5 +1,15 @@
 <div class="settings">
 
+	<div ng-show='error' class="alert alert-dismissible alert-danger">
+		<button type="button" class="close" data-dismiss="alert">×</button>
+		<strong>{{error.message}}</strong>
+	</div>
+
+	<div ng-show='success' class="alert alert-dismissible alert-success">
+		<button type="button" class="close" data-dismiss="alert">×</button>
+		<strong>{{success.message}}</strong>
+	</div>
+
 	<div class="container">
 
 		<h2>Settings</h2>
@@ -7,7 +17,7 @@
 		<form ng-submit='update()'>
 
 			<div class="form-group">
-				<label class="control-label" for="currentPassword">Old password</label>
+				<label class="control-label" for="currentPassword">Current password</label>
 				<input minlength='5' ng-model='data.currentPassword' type="password" class="form-control" id="currentPassword" required>
 			</div>
 
