--- a/public/app/sign/register.html
+++ b/public/app/sign/register.html
@@ -2,7 +2,7 @@
 
 	<div ng-show='error' class="alert alert-dismissible alert-danger">
 		<button type="button" class="close" data-dismiss="alert">×</button>
-		<strong>Error. Maybe this email already exists </strong>
+		<strong>This email already exists</strong>
 	</div>
 
 	<div class="container">
