[COMPLETE] Create custom poll

--- a/public/app/footer.html
+++ b/public/app/footer.html
@@ -5,7 +5,7 @@
 			<ul class="nav navbar-nav navbar-right">
 
 				<li><a>2015</a></li>
-				<li><a>Author: Nacho Lozano Rosendo</a></li>
+				<li><a target='_blank' href='http://nacholozano.github.io/'>Author: Nacho Lozano Rosendo</a></li>
 				<li><a target="_blank" href="https://github.com/nacholozano/voting-app">Source Code</a></li>
 
 			</ul>
