--- a/public/app/settings/settings.html
+++ b/public/app/settings/settings.html
@@ -1,29 +1,29 @@
 <div class="settings">
 
-	<div ng-show='error' class="alert alert-dismissible alert-danger">
+	<div ng-show='settings.error' class="alert alert-dismissible alert-danger">
 		<button type="button" class="close" data-dismiss="alert">×</button>
-		<strong>{{error.message}}</strong>
+		<strong>{{settings.error.message}}</strong>
 	</div>
 
-	<div ng-show='success' class="alert alert-dismissible alert-success">
+	<div ng-show='settings.success' class="alert alert-dismissible alert-success">
 		<button type="button" class="close" data-dismiss="alert">×</button>
-		<strong>{{success.message}}</strong>
+		<strong>{{settings.success.message}}</strong>
 	</div>
 
 	<div class="container">
 
 		<h2>Settings</h2>
 
-		<form ng-submit='update()'>
+		<form ng-submit='settings.update()'>
 
 			<div class="form-group">
 				<label class="control-label" for="currentPassword">Current password</label>
-				<input minlength='5' ng-model='data.currentPassword' type="password" class="form-control" id="currentPassword" required>
+				<input minlength='5' ng-model='settings.data.currentPassword' type="password" class="form-control" id="currentPassword" required>
 			</div>
 
 			<div class="form-group">
 				<label class="control-label" for="newPassword">New password</label>
-				<input minlength='5' ng-model='data.newPassword' type="password" class="form-control" id="newPassword">
+				<input minlength='5' ng-model='settings.data.newPassword' type="password" class="form-control" id="newPassword">
 			</div>
 
 			<button type='submit' class='btn btn-lg pull-right'>Update</button>
